⚡️ added commit message

--- a/.github/workflows/generate-markdown.yaml
+++ b/.github/workflows/generate-markdown.yaml
@@ -27,4 +27,5 @@ jobs:
     - uses: EndBug/add-and-commit@v7.0.0
       with:
         author_name: github-actions
+        message: '🔨 README TOC update - Github action'
         author_email: 41898282+github-actions[bot]@users.noreply.github.com
