--- a/.github/auto_assign.yml
+++ b/.github/auto_assign.yml
@@ -9,9 +9,8 @@ reviewers:
   - prakashsellathurai
 
 # A list of keywords to be skipped the process that add reviewers if pull requests include it 
-skipKeywords:
-  - wip
-
+assignees:
+  - prakashsellathurai
 # A number of reviewers added to the pull request
 # Set 0 to add all the reviewers (default: 0)
 numberOfReviewers: 0
